--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "@openzeppelin/contracts": "^4.2.0",
-    "@truffle/hdwallet-provider": "^1.4.2"
+    "@truffle/hdwallet-provider": "^1.4.2",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "web3": "^1.5.0"
   }
 }
