add rubi.finance ui

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-RUBI/node_modules/
-RUBI/docs/
+.DS_Store
+.env
+tilt_modules/*
+generated.go
+k8s/config-map/dev-env.yaml
+bazel-*
+*-debug.log
+nohup.out
+.firebase
+ui/*/node_modules/*
+ui/*/www/*
+*.log
+.eslintcache
+ui/*/src/generated/*
+tilt_config.json
+
