--- a/ui/rubi.finance/package.json
+++ b/ui/rubi.finance/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack serve",
+    "dev": "webpack serve --stats=minimal",
     "test": "jest",
     "posttest": "eslint . --ext .ts",
     "gql-codegen": "graphql-codegen --config codegen.yml && graphql-codegen --config codegen-guest.yml"
@@ -14,12 +14,21 @@
     "@bugsnag/js": "^7.11.0",
     "@bugsnag/plugin-react": "^7.11.0",
     "apollo3-cache-persist": "^0.13.0",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "graphql": "^15.6.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
-    "theme-ui": "^0.11.2"
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "theme-ui": "^0.11.2",
+    "web3": "^1.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -36,6 +45,7 @@
     "@types/jest": "^24.0.25",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-helmet": "^6.1.3",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "@typescript-eslint/parser": "^2.14.0",
@@ -51,14 +61,14 @@
     "eslint-plugin-react": "^7.17.0",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^5.3.2",
     "jest": "^24.9.0",
     "source-map-loader": "^2.0.0",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
-    "webpack": "^5.11.1",
+    "webpack": "^5.57.1",
     "webpack-bugsnag-plugins": "^1.6.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.1"
