create previous rounds widget

--- a/ui/rubi.finance/package.json
+++ b/ui/rubi.finance/package.json
@@ -13,6 +13,9 @@
     "@apollo/client": "^3.4.13",
     "@bugsnag/js": "^7.11.0",
     "@bugsnag/plugin-react": "^7.11.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "apollo3-cache-persist": "^0.13.0",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
