--- a/ui/rubi.finance/package.json
+++ b/ui/rubi.finance/package.json
@@ -45,6 +45,7 @@
     "@graphql-codegen/typescript": "^1.22.4",
     "@graphql-codegen/typescript-operations": "^1.18.3",
     "@graphql-codegen/typescript-react-apollo": "^2.3.0",
+    "@testing-library/jest-dom": "^5.15.0",
     "@types/jest": "^24.0.25",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
