--- a/ui/hedgepie.finance/hedgepie.finance/.eslintrc.json
+++ b/ui/hedgepie.finance/hedgepie.finance/.eslintrc.json
@@ -1,3 +1,27 @@
 {
-  "extends": "next/core-web-vitals"
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": [
+        "plugin:@next/next/recommended",
+        "plugin:react/recommended",
+        "standard",
+        "prettier"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react",
+        "@typescript-eslint"
+    ],
+    "rules": {
+        "quotes": [2, "double", { "avoidEscape": true }]
+    }
 }
