--- a/ui/hedgepie.finance/hedgepie.finance/package.json
+++ b/ui/hedgepie.finance/hedgepie.finance/package.json
@@ -15,13 +15,23 @@
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sass": "^1.49.0",
     "theme-ui": "^0.13.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.0.8",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
-    "eslint": "8.7.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "eslint": "^7.32.0",
     "eslint-config-next": "12.0.8",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-react": "^7.28.0",
     "typescript": "4.5.5"
   }
 }
