--- a/ui/hedgepie.finance/hedgepie.finance/package.json
+++ b/ui/hedgepie.finance/hedgepie.finance/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-react": "^7.28.0",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "4.5.5"
   }
 }
