Connect Wallet, Header, Navbar, Vault and Landing Page

--- a/ui/hedgepie.finance/hedgepie.finance/.eslintrc.json
+++ b/ui/hedgepie.finance/hedgepie.finance/.eslintrc.json
@@ -22,6 +22,8 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "quotes": [2, "double", { "avoidEscape": true }]
+        "quotes": [2, "double", { "avoidEscape": true }],
+        "no-use-before-define": "off",
+        "@typescript-eslint/no-use-before-define": ["error"]
     }
 }
