--- a/ui/hedgepie.finance/hedgepie.finance/tsconfig.json
+++ b/ui/hedgepie.finance/hedgepie.finance/tsconfig.json
@@ -14,12 +14,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl":".",
-    "paths": {
-      "@components/*":["components/*"],
-      "@constants/*":["constants/*"],
-      "@themes/*":["themes/*"]
-    }
+    "baseUrl":"."
   },
   "include": ["next-env.d.ts","additional.d.ts", "**/*.ts", "**/*.tsx","."],
   "exclude": ["node_modules"]
