--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npx hardhat compile",
     "lint": "npx solhint contracts/*.sol",
-    "test:all": "npx hardhat test --network hardhat"
+    "test:all": "npx hardhat test --network hardhat",
+    "test:YBNFT": "npx hardhat test ./test/YBNFT.js --network hardhat"
   },
   "repository": {
     "type": "git",
