--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@ethersproject/providers": "^5.6.0",
+    "@ledgerhq/iframe-provider": "^0.4.2",
     "@mdx-js/react": "^1.6.22",
     "@walletconnect/web3-provider": "^1.7.1",
     "ethers": "^5.5.3",
