--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
+    "react-feather": "^2.0.9",
     "sass": "^1.49.0",
     "theme-ui": "^0.13.1",
     "web3modal": "^1.9.5"
