--- a/ui/package.json
+++ b/ui/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -16,6 +17,7 @@
     "@walletconnect/web3-provider": "^1.7.1",
     "ethers": "^5.5.3",
     "next": "12.1.0",
+    "prettier": "^2.6.0",
     "react": "17.0.2",
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
