--- a/ui/package.json
+++ b/ui/package.json
@@ -33,6 +33,9 @@
     "styled-components": "^5.3.3",
     "theme-ui": "^0.13.1",
     "web3": "^1.7.1",
+    "web3-core-helpers": "^1.7.1",
+    "web3-eth-contract": "^1.7.1",
+    "web3-utils": "^1.7.1",
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
