--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "sass": "^1.49.0",
     "styled-components": "^5.3.3",
