--- a/v1-contract/package.json
+++ b/v1-contract/package.json
@@ -10,6 +10,7 @@
     "test:YBNFT": "npx hardhat test ./test/YBNFT.js --network hardhat",
     "deploy:mockBEP20": "npx hardhat run deploy/mockBEP20.ts --network bscTestnet",
     "deploy:vault": "npx hardhat run deploy/vault.ts --network bscTestnet",
+    "deploy:masterChef": "npx hardhat run deploy/masterChef.ts --network bscTestnet",
     "deploy:ybnft": "npx hardhat run deploy/ybnft.ts --network bscTestnet"
   },
   "repository": {
