--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "@ledgerhq/iframe-provider": "^0.4.2",
     "@mdx-js/react": "^1.6.22",
     "@reduxjs/toolkit": "^1.8.0",
+    "@szhsin/react-menu": "^3.0.0",
     "@walletconnect/web3-provider": "^1.7.1",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
