--- a/v1-contract/package.json
+++ b/v1-contract/package.json
@@ -9,6 +9,7 @@
     "test:all": "npx hardhat test --network hardhat",
     "test:YBNFT": "npx hardhat test ./test/YBNFT.js --network hardhat",
     "deploy:mockBEP20": "npx hardhat run deploy/mockBEP20.ts --network bscTestnet",
+    "deploy:mockLP": "npx hardhat run deploy/mockLP.ts --network bscTestnet",
     "deploy:vault": "npx hardhat run deploy/vault.ts --network bscTestnet",
     "deploy:masterChef": "npx hardhat run deploy/masterChef.ts --network bscTestnet",
     "deploy:ybnft": "npx hardhat run deploy/ybnft.ts --network bscTestnet",
