--- a/ui/package.json
+++ b/ui/package.json
@@ -31,6 +31,7 @@
     "react-feather": "^2.0.9",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
+    "react-select": "^5.2.2",
     "sass": "^1.49.0",
     "styled-components": "^5.3.3",
     "theme-ui": "^0.13.1",
