--- a/ui/hedgepie.finance/package.json
+++ b/ui/hedgepie.finance/package.json
@@ -49,6 +49,7 @@
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
+    "color": "^4.2.3",
     "cypress": "^9.5.3",
     "eslint": "^7.32.0",
     "eslint-config-next": "12.0.8",
