--- a/ui/hedgepie.finance/package.json
+++ b/ui/hedgepie.finance/package.json
@@ -24,6 +24,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.13",
     "@web3-react/walletlink-connector": "^6.2.13",
+    "cypress-file-upload": "^5.0.8",
     "d3": "^7.4.4",
     "ethers": "^5.5.3",
     "next": "12.1.0",
