--- a/ui/hedgepie.finance/package.json
+++ b/ui/hedgepie.finance/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-select": "^5.2.2",
+    "react-toastify": "^8.2.0",
     "sass": "^1.49.0",
     "styled-components": "^5.3.3",
     "theme-ui": "^0.13.1",
