--- a/v1-contract/package.json
+++ b/v1-contract/package.json
@@ -7,9 +7,9 @@
     "build": "npx hardhat compile",
     "lint": "npx solhint contracts/*.sol",
     "test": "npx hardhat test --network hardhat",
-    "test:vault": "npx hardhat test ./test/fuzz/vault.js --network hardhat",
-    "test:ybnft": "npx hardhat test ./test/fuzz/ybnft.js --network hardhat",
-    "test:investor": "npx hardhat test ./test/fuzz/investor.js --network hardhat",
+    "test:vault": "npx hardhat test ./test/unit/vault.js --network hardhat",
+    "test:ybnft": "npx hardhat test ./test/unit/ybnft.js --network hardhat",
+    "test:investor": "npx hardhat test ./test/unit/investor.js --network hardhat",
     "deploy:mockBEP20": "npx hardhat run deploy/mockBEP20.ts --network bscTestnet",
     "deploy:mockLP": "npx hardhat run deploy/mockLP.ts --network bscTestnet",
     "deploy:vault": "npx hardhat run deploy/vault.ts --network bscTestnet",
