--- a/ui/hedgepie.finance/package.json
+++ b/ui/hedgepie.finance/package.json
@@ -45,6 +45,7 @@
     "web3-core-helpers": "^1.7.1",
     "web3-eth-contract": "^1.7.1",
     "web3-utils": "^1.7.1",
+    "web3.storage": "^4.2.0",
     "web3modal": "^1.9.5"
   },
   "devDependencies": {
