--- a/v1-contract/package.json
+++ b/v1-contract/package.json
@@ -7,9 +7,13 @@
     "build": "npx hardhat compile",
     "lint": "npx solhint contracts/*.sol",
     "test": "npx hardhat test --network hardhat",
-    "test:vault": "npx hardhat test ./test/unit/vault.js --network hardhat",
-    "test:ybnft": "npx hardhat test ./test/unit/ybnft.js --network hardhat",
-    "test:investor": "npx hardhat test ./test/unit/investor.js --network hardhat",
+    "test:unit:vault": "npx hardhat test ./test/unit/vault.test.js --network hardhat",
+    "test:unit:ybnft": "npx hardhat test ./test/unit/ybnft.test.js --network hardhat",
+    "test:unit:investor": "npx hardhat test ./test/unit/investor.test.js --network hardhat",
+    "test:unit:pks-adapter": "npx hardhat test ./test/unit/adapters/pks/pks-stake-adapter.test.js --network hardhat",
+    "test:unit:venus-adapter": "npx hardhat test ./test/unit/adapters/venus/venus-lend-adapter.test.js --network hardhat",
+    "test:integration:pks-adapter": "npx hardhat test ./test/integration/adapters/pks/pks-stake-adapter.test.js --network hardhat",
+    "test:integration:venus-adapter": "npx hardhat test ./test/integration/adapters/venus/venus-lend-adapter.test.js --network hardhat",
     "deploy:mockBEP20": "npx hardhat run deploy/mockBEP20.ts --network bscTestnet",
     "deploy:mockLP": "npx hardhat run deploy/mockLP.ts --network bscTestnet",
     "deploy:vault": "npx hardhat run deploy/vault.ts --network bscTestnet",
@@ -33,6 +37,7 @@
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/hardhat-upgrades": "^1.14.0",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.21",
