refactor codebase, implement pks-stake-adapter

--- a/v1-contract/package.json
+++ b/v1-contract/package.json
@@ -12,8 +12,8 @@
     "test:unit:investor": "npx hardhat test ./test/unit/investor.test.js --network hardhat",
     "test:unit:pks-adapter": "npx hardhat test ./test/unit/adapters/pks/pks-stake-adapter.test.js --network hardhat",
     "test:unit:venus-adapter": "npx hardhat test ./test/unit/adapters/venus/venus-lend-adapter.test.js --network hardhat",
-    "test:integration:pks-adapter": "npx hardhat test ./test/integration/adapters/pks/pks-stake-adapter.test.js --network hardhat",
-    "test:integration:venus-adapter": "npx hardhat test ./test/integration/adapters/venus/venus-lend-adapter.test.js --network hardhat",
+    "test:integration:pks-stake-adapter": "npx hardhat test ./test/integration/adapters/pks/pks-stake-adapter.test.js --network hardhat",
+    "test:integration:venus-lend-adapter": "npx hardhat test ./test/integration/adapters/venus/venus-lend-adapter.test.js --network hardhat",
     "deploy:mockBEP20": "npx hardhat run deploy/mockBEP20.ts --network bscTestnet",
     "deploy:mockLP": "npx hardhat run deploy/mockLP.ts --network bscTestnet",
     "deploy:vault": "npx hardhat run deploy/vault.ts --network bscTestnet",
