--- a/v1-contract/package.json
+++ b/v1-contract/package.json
@@ -19,7 +19,8 @@
     "deploy:vault": "npx hardhat run deploy/vault.ts --network bscTestnet",
     "deploy:masterChef": "npx hardhat run deploy/masterChef.ts --network bscTestnet",
     "deploy:ybnft": "npx hardhat run deploy/ybnft.ts --network bscTestnet",
-    "deploy:multicall": "npx hardhat run deploy/multicall.ts --network bscTestnet"
+    "deploy:multicall": "npx hardhat run deploy/multicall.ts --network bscTestnet",
+    "deploy:all:mainnet": "npx hardhat run deploy/deploy.ts --network bsc"
   },
   "repository": {
     "type": "git",
