YBNFT Mint Page Updates

--- a/ui/hedgepie.finance/package.json
+++ b/ui/hedgepie.finance/package.json
@@ -27,9 +27,13 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.13",
     "@web3-react/walletlink-connector": "^6.2.13",
+    "axios": "^0.27.2",
+    "coinbase": "^2.0.8",
     "cypress-file-upload": "^5.0.8",
     "d3": "^7.4.4",
     "ethers": "^5.5.3",
+    "fs": "^0.0.1-security",
+    "net": "^1.0.2",
     "next": "12.1.0",
     "next-pwa": "^5.5.0",
     "prettier": "^2.6.0",
@@ -45,6 +49,7 @@
     "sass": "^1.49.0",
     "styled-components": "^5.3.3",
     "theme-ui": "^0.13.1",
+    "tls": "^0.0.1",
     "web3": "^1.7.1",
     "web3-core-helpers": "^1.7.1",
     "web3-eth-contract": "^1.7.1",
