--- a/v1-contract/package.json
+++ b/v1-contract/package.json
@@ -14,6 +14,8 @@
     "test:unit:venus-adapter": "npx hardhat test ./test/unit/adapters/venus/venus-lend-adapter.test.js --network hardhat",
     "test:integration:pks-stake-adapter": "npx hardhat test ./test/integration/adapters/pks/pks-stake-adapter.test.js --network hardhat",
     "test:integration:venus-lend-adapter": "npx hardhat test ./test/integration/adapters/venus/venus-lend-adapter.test.js --network hardhat",
+    "test:integration:apeswap-farm-lp-adapter": "npx hardhat test ./test/integration/adapters/apeswap/apeswap-farm-lp-adapter.test.js --network hardhat",
+    "test:integration:autofarm-vault-adapter": "npx hardhat test ./test/integration/adapters/autofarm/auto-farm-adapter.test.js --network hardhat",
     "deploy:mockBEP20": "npx hardhat run deploy/mockBEP20.ts --network bscTestnet",
     "deploy:mockLP": "npx hardhat run deploy/mockLP.ts --network bscTestnet",
     "deploy:vault": "npx hardhat run deploy/vault.ts --network bscTestnet",
