--- a/v1-contract/package.json
+++ b/v1-contract/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "npx hardhat compile",
     "lint": "npx solhint contracts/*.sol",
+    "test": "npx hardhat test --network hardhat",
     "test:integration:pks-stake-adapter": "npx hardhat test ./test/integration/adapters/pks/pks-stake-adapter.test.js --network hardhat",
     "test:integration:venus-lend-adapter": "npx hardhat test ./test/integration/adapters/venus/venus-lend-adapter.test.js --network hardhat",
     "test:integration:apeswap-farm-lp-adapter": "npx hardhat test ./test/integration/adapters/apeswap/apeswap-farm-lp-adapter.test.js --network hardhat",
