--- a/v1-contract/package.json
+++ b/v1-contract/package.json
@@ -46,6 +46,7 @@
     "fs": "^0.0.1-security",
     "hardhat-contract-sizer": "^2.4.0",
     "hardhat-deploy": "^0.10.6",
+    "mocha": "^10.0.0",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.7",
