--- a/v1-contract/package.json
+++ b/v1-contract/package.json
@@ -20,7 +20,8 @@
     "deploy:ybnft": "npx hardhat run deploy/ybnft.ts --network bscTestnet",
     "deploy:multicall": "npx hardhat run deploy/multicall.ts --network bscTestnet",
     "deploy:all:mainnet": "npx hardhat run deploy/deploy.ts --network bsc",
-    "deploy:all:mainnet1": "npx hardhat run deploy/deploy1.ts --network bsc"
+    "deploy:all:mainnet1": "npx hardhat run deploy/deploy1.ts --network bsc",
+    "code:size": "npx hardhat size-contracts"
   },
   "repository": {
     "type": "git",
@@ -44,7 +45,7 @@
     "@types/node": "^17.0.21",
     "dotenv-extended": "^2.9.0",
     "fs": "^0.0.1-security",
-    "hardhat-contract-sizer": "^2.4.0",
+    "hardhat-contract-sizer": "^2.6.1",
     "hardhat-deploy": "^0.10.6",
     "mocha": "^10.0.0",
     "prettier": "^2.5.1",
@@ -64,6 +65,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.2",
     "hardhat": "^2.10.1",
+    "hardhat-gas-reporter": "^1.0.8",
     "typechain": "^6.1.0"
   }
 }
