feat: add deployment for bnb venus adapters

--- a/v1-contract/package.json
+++ b/v1-contract/package.json
@@ -34,6 +34,9 @@
     "deploy:bnb:belt-busd-vault": "npx hardhat run deploy/bnb/belt/belt-busd-valut.ts --network bsc",
     "deploy:bnb:belt-usdt-vault": "npx hardhat run deploy/bnb/belt/belt-usdt-valut.ts --network bsc",
     "deploy:bnb:belt-btc-vault": "npx hardhat run deploy/bnb/belt/belt-btc-valut.ts --network bsc",
+    "deploy:bnb:venus-busd-lend": "npx hardhat run deploy/bnb/venus/venus-busd-lend.ts --network bsc",
+    "deploy:bnb:venus-busd-short": "npx hardhat run deploy/bnb/venus/venus-busd-short.ts --network bsc",
+    "deploy:bnb:venus-busd-long": "npx hardhat run deploy/bnb/venus/venus-busd-long.ts --network bsc",
     "code:size": "npx hardhat size-contracts",
     "deploy:network": "npx hardhat run deploy/deploy.ts --network",
     "verify:network": "npx hardhat verify --network"  },
