--- a/v1-contract/package.json
+++ b/v1-contract/package.json
@@ -40,6 +40,8 @@
     "deploy:bnb:alpaca-ibUSDT-ausd": "npx hardhat run deploy/bnb/alpaca/alpaca-ibUSDT-ausd.ts --network bsc",
     "deploy:bnb:alpaca-ibCake-stake": "npx hardhat run deploy/bnb/alpaca/alpaca-ibUSDT-stake.ts --network bsc",
     "deploy:bnb:alpaca-cake-lend": "npx hardhat run deploy/bnb/alpaca/alpaca-cake-lend.ts --network bsc",
+    "deploy:bnb:pankcakeswap-gal-stake": "npx hardhat run deploy/bnb/pks/pks-gal-stake.ts --network bsc",
+    "deploy:bnb:pankcakeswap-wbnb-cake-farm": "npx hardhat run deploy/bnb/pks/pks-wbnb-cake-farm.ts --network bsc",
     "code:size": "npx hardhat size-contracts",
     "deploy:network": "npx hardhat run deploy/deploy.ts --network",
     "verify:network": "npx hardhat verify --network"
