--- a/ui/hedgepie.finance/package.json
+++ b/ui/hedgepie.finance/package.json
@@ -41,6 +41,7 @@
     "react-feather": "^2.0.9",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
+    "react-responsive": "^9.0.0-beta.10",
     "react-select": "^5.2.2",
     "react-toastify": "^8.2.0",
     "sass": "^1.49.0",
