--- a/v1-contract/package.json
+++ b/v1-contract/package.json
@@ -67,6 +67,7 @@
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.21",
     "@uniswap/v3-periphery": "Uniswap/v3-periphery#0.8",
+    "axios": "^0.27.2",
     "dotenv-extended": "^2.9.0",
     "fs": "^0.0.1-security",
     "hardhat-contract-sizer": "^2.6.1",
