--- a/ui/hedgepie.finance/package.json
+++ b/ui/hedgepie.finance/package.json
@@ -30,6 +30,7 @@
     "d3": "^7.4.4",
     "ethers": "^5.5.3",
     "fs": "^0.0.1-security",
+    "moment": "^2.29.4",
     "net": "^1.0.2",
     "next": "12.1.0",
     "next-pwa": "^5.5.0",
