--- a/v1-contract/package.json
+++ b/v1-contract/package.json
@@ -7,12 +7,23 @@
     "build": "npx hardhat compile",
     "lint": "npx solhint contracts/*.sol",
     "test": "npx hardhat test --network hardhat",
-    "test:integration:pks-stake-adapter": "npx hardhat test ./test/integration/adapters/pks/pks-stake-adapter.test.js --network hardhat",
-    "test:integration:venus-lend-adapter": "npx hardhat test ./test/integration/adapters/venus/venus-lend-adapter.test.js --network hardhat",
-    "test:integration:apeswap-farm-lp-adapter": "npx hardhat test ./test/integration/adapters/apeswap/apeswap-farm-lp-adapter.test.js --network hardhat",
-    "test:integration:apeswap-jungle-adapter": "npx hardhat test ./test/integration/adapters/apeswap/apeswap-jungle-adapter.test.js --network hardhat",
-    "test:integration:apeswap-vault-adapter": "npx hardhat test ./test/integration/adapters/apeswap/apeswap-vault-adapter.test.js --network hardhat",
-    "test:integration:autofarm-vault-adapter": "npx hardhat test ./test/integration/adapters/autofarm/auto-vault-adapter.test.js --network hardhat",
+    "test:integration:bnb:pks-stake-adapter": "npx hardhat test ./test/integration/adapters/bnb/pks/pks-stake-adapter.test.js --network hardhat",
+    "test:integration:bnb:venus-lend-adapter": "npx hardhat test ./test/integration/adapters/bnb/venus/venus-lend-adapter.test.js --network hardhat",
+    "test:integration:bnb:apeswap-farm-lp-adapter": "npx hardhat test ./test/integration/adapters/bnb/apeswap/apeswap-farm-lp-adapter.test.js --network hardhat",
+    "test:integration:bnb:apeswap-jungle-adapter": "npx hardhat test ./test/integration/adapters/bnb/apeswap/apeswap-jungle-adapter.test.js --network hardhat",
+    "test:integration:bnb:apeswap-vault-adapter": "npx hardhat test ./test/integration/adapters/bnb/apeswap/apeswap-vault-adapter.test.js --network hardhat",
+    "test:integration:bnb:autofarm-vault-adapter": "npx hardhat test ./test/integration/adapters/bnb/autofarm/auto-vault-adapter.test.js --network hardhat",
+    "test:integration:polygon:aave-market-v2-adapter": "npx hardhat test ./test/integration/adapters/polygon/aave/aave-market-v2-adapter.test.js --network hardhat",
+    "test:integration:polygon:aave-market-v3-adapter": "npx hardhat test ./test/integration/adapters/polygon/aave/aave-market-v3-adapter.test.js --network hardhat",
+    "test:integration:polygon:beefy-lp-vault-adapter": "npx hardhat test ./test/integration/adapters/polygon/beefy/beefy-lp-vault-adapter.test.js --network hardhat",
+    "test:integration:polygon:beefy-single-vault-adapter": "npx hardhat test ./test/integration/adapters/polygon/beefy/single-vault-adapter.test.js --network hardhat",
+    "test:integration:polygon:curve-3lp-adapter": "npx hardhat test ./test/integration/adapters/polygon/curve/curve-3lp-adapter.test.js --network hardhat",
+    "test:integration:polygon:curve-4lp-adapter": "npx hardhat test ./test/integration/adapters/polygon/curve/curve-4lp-adapter.test.js --network hardhat",
+    "test:integration:polygon:quick-lp-dual-adapter": "npx hardhat test ./test/integration/adapters/polygon/quickswap/quick-lp-dual-adapter.test.js --network hardhat",
+    "test:integration:polygon:quick-lp-farm-adapter": "npx hardhat test ./test/integration/adapters/polygon/quickswap/quick-lp-farm-adapter.test.js --network hardhat",
+    "test:integration:polygon:quick-stake-adapter": "npx hardhat test ./test/integration/adapters/polygon/quickswap/quick-stake-adapter.test.js --network hardhat",
+    "test:integration:polygon:stargate-farm-adapter": "npx hardhat test ./test/integration/adapters/polygon/stargate/stargate-farm-adapter.test.js --network hardhat",
+    "test:integration:polygon:uniswap-lp-adapter": "npx hardhat test ./test/integration/adapters/polygon/uniswap/uniswap-lp-adapter.test.js --network hardhat",
     "deploy:mockBEP20": "npx hardhat run deploy/mockBEP20.ts --network bscTestnet",
     "deploy:mockLP": "npx hardhat run deploy/mockLP.ts --network bscTestnet",
     "deploy:vault": "npx hardhat run deploy/vault.ts --network bscTestnet",
