--- a/.github/workflows/meaven.yml
+++ b/.github/workflows/meaven.yml
@@ -2,8 +2,9 @@ name: Hedge Pie Automation Tests CI
 
 on:
   workflow_dispatch:
-  schedule:
-      - cron: "30 2 * * *"
+  pull_request:
+    branches:
+      - 'dev/**'
 jobs:
   build:
 
@@ -12,7 +13,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        ref: e2e-tests
+        ref: dev
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
