--- a/ui/hedgepie.finance/package.json
+++ b/ui/hedgepie.finance/package.json
@@ -27,6 +27,7 @@
     "@web3-react/walletlink-connector": "^6.2.13",
     "axios": "^0.27.2",
     "chart.js": "^3.9.1",
+    "chroma-js": "^2.4.2",
     "coinbase": "^2.0.8",
     "cypress-file-upload": "^5.0.8",
     "d3": "^7.4.4",
