--- a/.github/workflows/meaven.yml
+++ b/.github/workflows/meaven.yml
@@ -2,11 +2,10 @@ name: Hedge Pie Automation Tests CI
 
 on:
   workflow_dispatch:
-  pull_request:
-    types:
-      - opened
+  pull_request_target:
     branches:
-      - ['dev/**', 'main/**']
+      - dev
+      - main
 jobs:
   build:
 
