--- a/ui/hedgepie.com/package.json
+++ b/ui/hedgepie.com/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
+    "@szhsin/react-menu": "^3.2.0",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.3.5",
+    "react-feather": "^2.0.10",
     "theme-ui": "^0.15.3"
   },
   "devDependencies": {
