feat: add scripts in package.json to run tests per network

--- a/v1-contract/package.json
+++ b/v1-contract/package.json
@@ -7,6 +7,9 @@
     "build": "npx hardhat compile",
     "lint": "npx solhint contracts/*.sol",
     "test": "npx hardhat test --network hardhat",
+    "test:eth": "npx hardhat test ./test/integration/adapters/eth/**/*.test.js --network hardhat",
+    "test:bnb": "npx hardhat test ./test/integration/adapters/bnb/**/*.test.js --network hardhat",
+    "test:polygon": "npx hardhat test ./test/integration/adapters/polygon/**/*.test.js --network hardhat",
     "test:integration:bnb:pks-stake-adapter": "npx hardhat test ./test/integration/adapters/bnb/pks/pks-stake-adapter.test.js --network hardhat",
     "test:integration:bnb:venus-lend-adapter": "npx hardhat test ./test/integration/adapters/bnb/venus/venus-lend-adapter.test.js --network hardhat",
     "test:integration:bnb:apeswap-farm-lp-adapter": "npx hardhat test ./test/integration/adapters/bnb/apeswap/apeswap-farm-lp-adapter.test.js --network hardhat",
