feat: add eslint npm module

--- a/v1-contract/package.json
+++ b/v1-contract/package.json
@@ -1,110 +1,112 @@
 {
-  "name": "rubi-token",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "npx hardhat compile",
-    "lint": "npx solhint contracts/*.sol",
-    "test": "npx hardhat test --network hardhat",
-    "test:eth": "npx hardhat test ./test/integration/adapters/eth/**/*.test.js --network hardhat",
-    "test:bnb": "npx hardhat test ./test/integration/adapters/bnb/**/*.test.js --network hardhat",
-    "test:polygon": "npx hardhat test ./test/integration/adapters/polygon/**/*.test.js --network hardhat",
-    "test:integration:bnb:pks-stake-adapter": "npx hardhat test ./test/integration/adapters/bnb/pks/pks-stake-adapter.test.js --network hardhat",
-    "test:integration:bnb:venus-lend-adapter": "npx hardhat test ./test/integration/adapters/bnb/venus/venus-lend-adapter.test.js --network hardhat",
-    "test:integration:bnb:apeswap-farm-lp-adapter": "npx hardhat test ./test/integration/adapters/bnb/apeswap/apeswap-farm-lp-adapter.test.js --network hardhat",
-    "test:integration:bnb:apeswap-jungle-adapter": "npx hardhat test ./test/integration/adapters/bnb/apeswap/apeswap-jungle-adapter.test.js --network hardhat",
-    "test:integration:bnb:apeswap-vault-adapter": "npx hardhat test ./test/integration/adapters/bnb/apeswap/apeswap-vault-adapter.test.js --network hardhat",
-    "test:integration:bnb:autofarm-vault-adapter": "npx hardhat test ./test/integration/adapters/bnb/autofarm/auto-vault-adapter.test.js --network hardhat",
-    "test:integration:polygon:aave-market-v2-adapter": "npx hardhat test ./test/integration/adapters/polygon/aave/aave-market-v2-adapter.test.js --network hardhat",
-    "test:integration:polygon:aave-market-v3-adapter": "npx hardhat test ./test/integration/adapters/polygon/aave/aave-market-v3-adapter.test.js --network hardhat",
-    "test:integration:polygon:beefy-lp-vault-adapter": "npx hardhat test ./test/integration/adapters/polygon/beefy/beefy-lp-vault-adapter.test.js --network hardhat",
-    "test:integration:polygon:beefy-single-vault-adapter": "npx hardhat test ./test/integration/adapters/polygon/beefy/single-vault-adapter.test.js --network hardhat",
-    "test:integration:polygon:curve-3lp-adapter": "npx hardhat test ./test/integration/adapters/polygon/curve/curve-3lp-adapter.test.js --network hardhat",
-    "test:integration:polygon:curve-4lp-adapter": "npx hardhat test ./test/integration/adapters/polygon/curve/curve-4lp-adapter.test.js --network hardhat",
-    "test:integration:polygon:quick-lp-dual-adapter": "npx hardhat test ./test/integration/adapters/polygon/quickswap/quick-lp-dual-adapter.test.js --network hardhat",
-    "test:integration:polygon:quick-lp-farm-adapter": "npx hardhat test ./test/integration/adapters/polygon/quickswap/quick-lp-farm-adapter.test.js --network hardhat",
-    "test:integration:polygon:quick-stake-adapter": "npx hardhat test ./test/integration/adapters/polygon/quickswap/quick-stake-adapter.test.js --network hardhat",
-    "test:integration:polygon:stargate-farm-adapter": "npx hardhat test ./test/integration/adapters/polygon/stargate/stargate-farm-adapter.test.js --network hardhat",
-    "test:integration:polygon:uniswap-lp-adapter": "npx hardhat test ./test/integration/adapters/polygon/uniswap/uniswap-lp-adapter.test.js --network hardhat",
-    "deploy:mockBEP20": "npx hardhat run deploy/mockBEP20.ts --network bscTestnet",
-    "deploy:mockLP": "npx hardhat run deploy/mockLP.ts --network bscTestnet",
-    "deploy:vault": "npx hardhat run deploy/vault.ts --network bscTestnet",
-    "deploy:masterChef": "npx hardhat run deploy/masterChef.ts --network bscTestnet",
-    "deploy:ybnft": "npx hardhat run deploy/ybnft.ts --network bscTestnet",
-    "deploy:multicall": "npx hardhat run deploy/multicall.ts --network bscTestnet",
-    "deploy:all:mainnet": "npx hardhat run deploy/deploy.ts --network bsc",
-    "deploy:bnb:investor": "npx hardhat run deploy/bnb/index.ts --network bsc",
-    "deploy:bnb:apeswap-busd-wbnb-farm": "npx hardhat run deploy/bnb/apeswap/apeswap-busd-wbnb-farm.ts --network bsc",
-    "deploy:bnb:apeswap-eth-wbnb-farm": "npx hardhat run deploy/bnb/apeswap/apeswap-eth-wbnb-farm.ts --network bsc",
-    "deploy:bnb:apeswap-banana-busd-farm": "npx hardhat run deploy/bnb/apeswap/apeswap-banana-busd-farm.ts --network bsc",
-    "deploy:bnb:autofarm-wbnb-cake-vault": "npx hardhat run deploy/bnb/autofarm/autofarm-wbnb-cake-vault.ts --network bsc",
-    "deploy:bnb:autofarm-wbnb-busd-vault": "npx hardhat run deploy/bnb/autofarm/autofarm-wbnb-busd-vault.ts --network bsc",
-    "deploy:bnb:autofarm-wbnb-ada-vault": "npx hardhat run deploy/bnb/autofarm/autofarm-wbnb-ada-vault.ts --network bsc",
-    "deploy:bnb:biswap-bsw-farm": "npx hardhat run deploy/bnb/biswap/biswap-bsw-farm.ts --network bsc",
-    "deploy:bnb:biswap-bsw-usdt-farm": "npx hardhat run deploy/bnb/biswap/biswap-bsw-usdt-farm.ts --network bsc",
-    "deploy:bnb:beefy-eth-vault": "npx hardhat run deploy/bnb/beefy/beefy-eth-vault.ts --network bsc",
-    "deploy:bnb:beefy-bsw-usdt-busd-vault": "npx hardhat run deploy/bnb/beefy/beefy-bsw-usdt-busd-vault.ts --network bsc",
-    "deploy:bnb:belt-busd-vault": "npx hardhat run deploy/bnb/belt/belt-busd-valut.ts --network bsc",
-    "deploy:bnb:belt-usdt-vault": "npx hardhat run deploy/bnb/belt/belt-usdt-valut.ts --network bsc",
-    "deploy:bnb:belt-btc-vault": "npx hardhat run deploy/bnb/belt/belt-btc-valut.ts --network bsc",
-    "deploy:bnb:venus-busd-lend": "npx hardhat run deploy/bnb/venus/venus-busd-lend.ts --network bsc",
-    "deploy:bnb:venus-busd-short": "npx hardhat run deploy/bnb/venus/venus-busd-short.ts --network bsc",
-    "deploy:bnb:venus-busd-long": "npx hardhat run deploy/bnb/venus/venus-busd-long.ts --network bsc",
-    "deploy:bnb:alpaca-ibUSDT-ausd": "npx hardhat run deploy/bnb/alpaca/alpaca-ibUSDT-ausd.ts --network bsc",
-    "deploy:bnb:alpaca-ibCake-stake": "npx hardhat run deploy/bnb/alpaca/alpaca-ibUSDT-stake.ts --network bsc",
-    "deploy:bnb:alpaca-cake-lend": "npx hardhat run deploy/bnb/alpaca/alpaca-cake-lend.ts --network bsc",
-    "deploy:bnb:pankcakeswap-gal-stake": "npx hardhat run deploy/bnb/pks/pks-gal-stake.ts --network bsc",
-    "deploy:bnb:pankcakeswap-wbnb-cake-farm": "npx hardhat run deploy/bnb/pks/pks-wbnb-cake-farm.ts --network bsc",
-    "code:size": "npx hardhat size-contracts",
-    "deploy:network": "npx hardhat run deploy/deploy.ts --network",
-    "verify:network": "npx hardhat verify --network"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/abe-sinjiro/rubi-token.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/abe-sinjiro/rubi-token/issues"
-  },
-  "homepage": "https://github.com/abe-sinjiro/rubi-token#readme",
-  "dependencies": {
-    "@chainlink/contracts": "^0.4.0",
-    "@nomiclabs/hardhat-etherscan": "^3.0.0",
-    "@openzeppelin/contracts": "^4.5.0",
-    "@openzeppelin/hardhat-upgrades": "^1.14.0",
-    "@openzeppelin/test-helpers": "^0.5.15",
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^17.0.21",
-    "@uniswap/v3-periphery": "Uniswap/v3-periphery#0.8",
-    "axios": "^0.27.2",
-    "dotenv-extended": "^2.9.0",
-    "fs": "^0.0.1-security",
-    "hardhat-contract-sizer": "^2.6.1",
-    "hardhat-deploy": "^0.10.6",
-    "mocha": "^10.0.0",
-    "prettier": "^2.5.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.19",
-    "solhint": "^3.3.7",
-    "solhint-plugin-prettier": "^0.0.5",
-    "ts-node": "^10.5.0",
-    "tslog": "^3.3.2",
-    "typescript": "^4.6.2"
-  },
-  "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.3",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@typechain/ethers-v5": "^8.0.5",
-    "@typechain/hardhat": "^3.1.0",
-    "chai": "^4.3.4",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.2",
-    "hardhat": "^2.10.1",
-    "hardhat-gas-reporter": "^1.0.8",
-    "typechain": "^6.1.0"
-  }
+    "name": "rubi-token",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "npx hardhat compile",
+        "lint": "npx solhint contracts/*.sol",
+        "eslint:test": "eslint test",
+        "test": "npx hardhat test --network hardhat",
+        "test:eth": "npx hardhat test ./test/integration/adapters/eth/**/*.test.js --network hardhat",
+        "test:bnb": "npx hardhat test ./test/integration/adapters/bnb/**/*.test.js --network hardhat",
+        "test:polygon": "npx hardhat test ./test/integration/adapters/polygon/**/*.test.js --network hardhat",
+        "test:integration:bnb:pks-stake-adapter": "npx hardhat test ./test/integration/adapters/bnb/pks/pks-stake-adapter.test.js --network hardhat",
+        "test:integration:bnb:venus-lend-adapter": "npx hardhat test ./test/integration/adapters/bnb/venus/venus-lend-adapter.test.js --network hardhat",
+        "test:integration:bnb:apeswap-farm-lp-adapter": "npx hardhat test ./test/integration/adapters/bnb/apeswap/apeswap-farm-lp-adapter.test.js --network hardhat",
+        "test:integration:bnb:apeswap-jungle-adapter": "npx hardhat test ./test/integration/adapters/bnb/apeswap/apeswap-jungle-adapter.test.js --network hardhat",
+        "test:integration:bnb:apeswap-vault-adapter": "npx hardhat test ./test/integration/adapters/bnb/apeswap/apeswap-vault-adapter.test.js --network hardhat",
+        "test:integration:bnb:autofarm-vault-adapter": "npx hardhat test ./test/integration/adapters/bnb/autofarm/auto-vault-adapter.test.js --network hardhat",
+        "test:integration:polygon:aave-market-v2-adapter": "npx hardhat test ./test/integration/adapters/polygon/aave/aave-market-v2-adapter.test.js --network hardhat",
+        "test:integration:polygon:aave-market-v3-adapter": "npx hardhat test ./test/integration/adapters/polygon/aave/aave-market-v3-adapter.test.js --network hardhat",
+        "test:integration:polygon:beefy-lp-vault-adapter": "npx hardhat test ./test/integration/adapters/polygon/beefy/beefy-lp-vault-adapter.test.js --network hardhat",
+        "test:integration:polygon:beefy-single-vault-adapter": "npx hardhat test ./test/integration/adapters/polygon/beefy/single-vault-adapter.test.js --network hardhat",
+        "test:integration:polygon:curve-3lp-adapter": "npx hardhat test ./test/integration/adapters/polygon/curve/curve-3lp-adapter.test.js --network hardhat",
+        "test:integration:polygon:curve-4lp-adapter": "npx hardhat test ./test/integration/adapters/polygon/curve/curve-4lp-adapter.test.js --network hardhat",
+        "test:integration:polygon:quick-lp-dual-adapter": "npx hardhat test ./test/integration/adapters/polygon/quickswap/quick-lp-dual-adapter.test.js --network hardhat",
+        "test:integration:polygon:quick-lp-farm-adapter": "npx hardhat test ./test/integration/adapters/polygon/quickswap/quick-lp-farm-adapter.test.js --network hardhat",
+        "test:integration:polygon:quick-stake-adapter": "npx hardhat test ./test/integration/adapters/polygon/quickswap/quick-stake-adapter.test.js --network hardhat",
+        "test:integration:polygon:stargate-farm-adapter": "npx hardhat test ./test/integration/adapters/polygon/stargate/stargate-farm-adapter.test.js --network hardhat",
+        "test:integration:polygon:uniswap-lp-adapter": "npx hardhat test ./test/integration/adapters/polygon/uniswap/uniswap-lp-adapter.test.js --network hardhat",
+        "deploy:mockBEP20": "npx hardhat run deploy/mockBEP20.ts --network bscTestnet",
+        "deploy:mockLP": "npx hardhat run deploy/mockLP.ts --network bscTestnet",
+        "deploy:vault": "npx hardhat run deploy/vault.ts --network bscTestnet",
+        "deploy:masterChef": "npx hardhat run deploy/masterChef.ts --network bscTestnet",
+        "deploy:ybnft": "npx hardhat run deploy/ybnft.ts --network bscTestnet",
+        "deploy:multicall": "npx hardhat run deploy/multicall.ts --network bscTestnet",
+        "deploy:all:mainnet": "npx hardhat run deploy/deploy.ts --network bsc",
+        "deploy:bnb:investor": "npx hardhat run deploy/bnb/index.ts --network bsc",
+        "deploy:bnb:apeswap-busd-wbnb-farm": "npx hardhat run deploy/bnb/apeswap/apeswap-busd-wbnb-farm.ts --network bsc",
+        "deploy:bnb:apeswap-eth-wbnb-farm": "npx hardhat run deploy/bnb/apeswap/apeswap-eth-wbnb-farm.ts --network bsc",
+        "deploy:bnb:apeswap-banana-busd-farm": "npx hardhat run deploy/bnb/apeswap/apeswap-banana-busd-farm.ts --network bsc",
+        "deploy:bnb:autofarm-wbnb-cake-vault": "npx hardhat run deploy/bnb/autofarm/autofarm-wbnb-cake-vault.ts --network bsc",
+        "deploy:bnb:autofarm-wbnb-busd-vault": "npx hardhat run deploy/bnb/autofarm/autofarm-wbnb-busd-vault.ts --network bsc",
+        "deploy:bnb:autofarm-wbnb-ada-vault": "npx hardhat run deploy/bnb/autofarm/autofarm-wbnb-ada-vault.ts --network bsc",
+        "deploy:bnb:biswap-bsw-farm": "npx hardhat run deploy/bnb/biswap/biswap-bsw-farm.ts --network bsc",
+        "deploy:bnb:biswap-bsw-usdt-farm": "npx hardhat run deploy/bnb/biswap/biswap-bsw-usdt-farm.ts --network bsc",
+        "deploy:bnb:beefy-eth-vault": "npx hardhat run deploy/bnb/beefy/beefy-eth-vault.ts --network bsc",
+        "deploy:bnb:beefy-bsw-usdt-busd-vault": "npx hardhat run deploy/bnb/beefy/beefy-bsw-usdt-busd-vault.ts --network bsc",
+        "deploy:bnb:belt-busd-vault": "npx hardhat run deploy/bnb/belt/belt-busd-valut.ts --network bsc",
+        "deploy:bnb:belt-usdt-vault": "npx hardhat run deploy/bnb/belt/belt-usdt-valut.ts --network bsc",
+        "deploy:bnb:belt-btc-vault": "npx hardhat run deploy/bnb/belt/belt-btc-valut.ts --network bsc",
+        "deploy:bnb:venus-busd-lend": "npx hardhat run deploy/bnb/venus/venus-busd-lend.ts --network bsc",
+        "deploy:bnb:venus-busd-short": "npx hardhat run deploy/bnb/venus/venus-busd-short.ts --network bsc",
+        "deploy:bnb:venus-busd-long": "npx hardhat run deploy/bnb/venus/venus-busd-long.ts --network bsc",
+        "deploy:bnb:alpaca-ibUSDT-ausd": "npx hardhat run deploy/bnb/alpaca/alpaca-ibUSDT-ausd.ts --network bsc",
+        "deploy:bnb:alpaca-ibCake-stake": "npx hardhat run deploy/bnb/alpaca/alpaca-ibUSDT-stake.ts --network bsc",
+        "deploy:bnb:alpaca-cake-lend": "npx hardhat run deploy/bnb/alpaca/alpaca-cake-lend.ts --network bsc",
+        "deploy:bnb:pankcakeswap-gal-stake": "npx hardhat run deploy/bnb/pks/pks-gal-stake.ts --network bsc",
+        "deploy:bnb:pankcakeswap-wbnb-cake-farm": "npx hardhat run deploy/bnb/pks/pks-wbnb-cake-farm.ts --network bsc",
+        "code:size": "npx hardhat size-contracts",
+        "deploy:network": "npx hardhat run deploy/deploy.ts --network",
+        "verify:network": "npx hardhat verify --network"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/abe-sinjiro/rubi-token.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/abe-sinjiro/rubi-token/issues"
+    },
+    "homepage": "https://github.com/abe-sinjiro/rubi-token#readme",
+    "dependencies": {
+        "@chainlink/contracts": "^0.4.0",
+        "@nomiclabs/hardhat-etherscan": "^3.0.0",
+        "@openzeppelin/contracts": "^4.5.0",
+        "@openzeppelin/hardhat-upgrades": "^1.14.0",
+        "@openzeppelin/test-helpers": "^0.5.15",
+        "@types/chai": "^4.3.0",
+        "@types/mocha": "^9.1.0",
+        "@types/node": "^17.0.21",
+        "@uniswap/v3-periphery": "Uniswap/v3-periphery#0.8",
+        "axios": "^0.27.2",
+        "dotenv-extended": "^2.9.0",
+        "fs": "^0.0.1-security",
+        "hardhat-contract-sizer": "^2.6.1",
+        "hardhat-deploy": "^0.10.6",
+        "mocha": "^10.0.0",
+        "prettier": "^2.5.1",
+        "prettier-plugin-solidity": "^1.0.0-beta.19",
+        "solhint": "^3.3.7",
+        "solhint-plugin-prettier": "^0.0.5",
+        "ts-node": "^10.5.0",
+        "tslog": "^3.3.2",
+        "typescript": "^4.6.2"
+    },
+    "devDependencies": {
+        "@nomiclabs/hardhat-ethers": "^2.0.3",
+        "@nomiclabs/hardhat-waffle": "^2.0.1",
+        "@typechain/ethers-v5": "^8.0.5",
+        "@typechain/hardhat": "^3.1.0",
+        "chai": "^4.3.4",
+        "eslint": "^8.27.0",
+        "ethereum-waffle": "^3.4.0",
+        "ethers": "^5.5.2",
+        "hardhat": "^2.10.1",
+        "hardhat-gas-reporter": "^1.0.8",
+        "typechain": "^6.1.0"
+    }
 }
