--- a/v1-contract/package.json
+++ b/v1-contract/package.json
@@ -83,7 +83,7 @@
         "@types/mocha": "^9.1.0",
         "@types/node": "^17.0.21",
         "@uniswap/v3-periphery": "Uniswap/v3-periphery#0.8",
-        "axios": "^0.27.2",
+        "axios": "^1.1.3",
         "dotenv-extended": "^2.9.0",
         "fs": "^0.0.1-security",
         "hardhat-contract-sizer": "^2.6.1",
@@ -98,10 +98,12 @@
         "typescript": "^4.6.2"
     },
     "devDependencies": {
+        "@curvefi/api": "^2.21.5",
         "@nomiclabs/hardhat-ethers": "^2.0.3",
         "@nomiclabs/hardhat-waffle": "^2.0.1",
         "@typechain/ethers-v5": "^8.0.5",
         "@typechain/hardhat": "^3.1.0",
+        "bignumber.js": "^9.1.0",
         "chai": "^4.3.4",
         "eslint": "^8.27.0",
         "ethereum-waffle": "^3.4.0",
